--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,3 @@
-/* ------------------------------------------------------------------------------
-
-	Template Name: Coming soon
-	Template URI: http://http://www.themeelite.com/comingsoon
-	Description: Full Screen Coming Soon Template
-	Author: Andy
-	Author URI: http://www.themeelite.com
-	License: GNU General Public License version 3.0
-	License URI: http://www.gnu.org/licenses/gpl-3.0.html
-	Version: 1.0
-	
-	1. CSS Reset
-	2. Document Setup
-	3. Header Part
-		3.1 Slide show background control
-	4. Background slider CSS style
-	5. Menu Style
-	6. About me Style
-	7. Technical Skills Style
-	8. Work Experience Style
-	9. Education Style
-	10. Protfolio Style
-	11. Get in tuch Style
-	12. Footer Style
-	13. Responsive style
-		
-		
----------------------------------------------------------------------------------
-/* 1. CSS Reset
--------------------------------------------------------------------------------*/
-
 * {
 	padding: 0;
 	margin: 0;
@@ -52,11 +21,6 @@ a {
 	outline: none;
 }
 
-
-
-/*----------------------------------------------------
- 2.	Document Setup
-------------------------------------------------------*/
 .wrapper {
 	width: 100%;
 }
@@ -576,12 +540,6 @@ header {
 	text-transform: uppercase;
 }
 
-
-.skilBg {
-	background: url("../images/skills.png") no-repeat 0 0;
-}
-
-
 .chart {
 	position: relative;
 	display: inline-block;
@@ -675,13 +633,6 @@ header {
 }
 
 
-.arrowpart {
-	float: left;
-	width: 15px;
-	height: 50px;
-	background: url("../images/arrow-left.png") no-repeat 0 23px;
-}
-
 .exCon {
 	width: auto;
 	background: #f3f3f3;
@@ -735,11 +686,6 @@ header {
 
 .education h4 {
 	font-weight: 700;
-}
-
-
-.education .arrowpart {
-	background: url("../images/arrow-left-light.png") no-repeat 0 23px;
 }
 
 .education .exCon {
@@ -1335,18 +1281,7 @@ ul.portfolioContainer li:hover span.hoverBox .linKed {
 	.workDetails .rightArea {
 		border-left: none;
 	}
-
-	.arrowpart {
-		float: none;
-		width: 100%;
-		height: 40px;
-		background: url("../images/arrow-top.png") no-repeat 50% 100%;
-	}
-
-	.education .arrowpart {
-		background: url("../images/arrow-top-light.png") no-repeat 50% 100%;
-	}
-
+	
 	.exCon {
 		margin-left: 0px;
 	}
@@ -1449,7 +1384,8 @@ ul.portfolioContainer li:hover span.hoverBox .linKed {
 	}
 }
 
-.projet {
+
+.projet{
 	background: #474D5D;
 }
 
@@ -1479,4 +1415,20 @@ ul.portfolioContainer li:hover span.hoverBox .linKed {
 
 ul {
 	margin-bottom: 0px !important;
+}
+
+.veilleTechnoTitre, .projetTitre{
+	text-align: center;
+}
+
+.pdfE4{
+	margin-left: 130px;
+}
+
+.PDFResume{
+	display: flex;
+}
+
+.believe{
+	margin-left: 15px;
 }
